# PolScience

./: .gitignore  README.md  institution_counts.csv  main.py  pyproject.toml
ExpertSearchApp/: README.md  pyproject.toml
ExpertSearchApp/docs/: expert_retrieval_fusion.md  old_report.tex  presentation.tex  report.tex
ExpertSearchApp/scripts/: query_experts.py
ExpertSearchApp/src/api/: __init__.py  app.py  config.py  profile_urls.py  search_service.py
ExpertSearchApp/src/api/static/: app.js  index.html
ExpertSearchApp/src/graph/: __init__.py  publication_graph.py
ExpertSearchApp/src/retrieval/: bm25_index.py  coauth_graph.py  corpus.py  embeddings.py  filters.py  fusion.py  logging_config.py  modes.py  pipeline.py  ppr.py
ExpertSearchApp/tests/: test_filters.py  test_gexf_metrics.py  test_publication_graph.py  test_retrieval_fusion.py
LudzieNaukiScraper/: README.md  pyproject.toml  requirements.txt  schema.sql
LudzieNaukiScraper/ludzie_nauki/: __init__.py  __main__.py  db.py  http_client.py  migrate_specialties_dedup.py  pass1.py  pass2.py  pass3.py  pass4.py  radon.py  radon_queue.py  search_sharding.py  specialty_labels.py  util.py
LudzieNaukiScraper/scripts/: add_institution_student_counts.py
Ludzie_Nauka/: Queries.txt  README.md
Ludzie_Nauka/scrapers/: db_utils.py  dyscypliny.json  generated_urls_test.json  generator_url.py  init_db.py  instytucje.json  krzysztof_chelminski_profile.json  load_search_pages.py  profile_scraper.py  profile_scraper_test.py  schema.sql  scraper.py  scraper_test.py  write_progress.py
PWrEmailDataEnrichment/: README.md  people.js  people.json  update_pwr_emails.py
PolUni/: READNE.md  institution_counts.csv  institutions.csv  pom.xml
data/: download_db.py
docs/: README.md  expert_retrieval_code.md  expert_retrieval_fusion.md  graph_metrics_search.md  jepa.md  web_api.md
graphGeneration/: pyproject.toml
graphGeneration/src/: graph_io.py
graphGeneration/tests/: test_data_loader.py  test_graph_io.py
scripts/: query_experts.py
src/: __init__.py  data_loader.py  generate_graphs.py  graph_io.py
src/api/: app.py  config.py  (+3 more)
tests/: test_api.py  test_gexf_metrics.py  test_graph_io.py  test_profile_graph_metrics.py  test_profile_urls.py  test_retrieval_fusion.py
(+15759 files in other folders)
