[project]
name = "polscience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "requests>=2.34.2",
]

[project.optional-dependencies]
retrieval = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "scipy>=1.14",
]

[tool.uv.workspace]
members = [
    "LudzieNaukiScraper",
]
