[project]
name = "polscience"
version = "0.1.0"
description = "Polish academic network graph analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "requests>=2.34.2",
    "adjusttext>=1.3.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
retrieval = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "scipy>=1.14",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]


[tool.uv.workspace]
members = [
    "LudzieNaukiScraper"
]
