[project]
name = "expert-search-app"
version = "0.1.0"
description = "BM25 + semantic + PPR expert search over Ludzie Nauki profiles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "networkx>=3.6.1",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
retrieval = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
