[project]
name = "polscience"
version = "0.1.0"
description = "Polish academic network graph analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "scipy>=1.17.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
